--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <br>
-<h1 style="text-align: center;color: #1b3380;">A Divertirse!</h1>
+<h1 style="text-align: center;color: #000000;">BΞΔ HOUSE ROULETTE</h1>
 <div class="roulette">
     <div class="spinner"></div>
     <div class="shadow"></div>
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="button">
-        <span>TSP</span>
+        <span>GIRAR</span>
     </div>
 </div>
 </div>
