--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.79, shrink-to-fit=no">
-    <title>Ruleta BETA HOUSE</title>
+    <title>Ruleta TSP</title>
     <link type="text/css" href="style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
 <br>
-<h1 style="text-align: center;color: #000000;">BΞΔ HOUSE ROULETTE</h1>
+<h1 style="text-align: center;color: #000000;">RULETA TSP</h1>
 <div class="roulette">
     <div class="spinner"></div>
     <div class="shadow"></div>
